--- a/prototipo_telas/cadastro/cadastro_reservas.html
+++ b/prototipo_telas/cadastro/cadastro_reservas.html
@@ -53,15 +53,19 @@
 			<form action="cadastrar_cliente_submit" method="post" accept-charset="utf-8">
 				<div class="form-group">
 					<label for="data_reserva">Data Reserva</label>
-					<input type="text" name="data_reserva" id="data_reserva" class="form-control">	
+					<input type="date" name="data_reserva" id="data_reserva" class="form-control">	
 				</div>
 				<div class="form-group">
 					<label for="hora_reserva">Hora Reserva</label>
-					<input type="text" name="hora_reserva" id="hora_reserva" class="form-control">	
+					<input type="time" name="hora_reserva" id="hora_reserva" class="form-control">	
 				</div>
 				<div class="form-group">
 					<label for="numero_pessoas_reserva">Numero de Pessoas Reserva</label>
-					<input type="text" name="numero_pessoas_reserva" id="numero_pessoas_reserva" class="form-control">	
+					<input type="number" name="numero_pessoas_reserva" id="numero_pessoas_reserva" class="form-control">	
+				</div>
+				<div class="form-group">
+					<label for="cpf_cliente">CPF Cliente</label>
+					<input type="num" name="cpf_cliente" id="cpf_cliente" class="form-control">	
 				</div>
 				<div class="text-center">
 					<button type="submit" class="btn btn-danger btn-lg my-btn">Cadastrar</button>
